--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
   <div id="result"></div>
 
   <label>備註:
-    <textarea id="note" placeholder="若需補簽，請填寫補簽時間與專案"></textarea>
+    <textarea id="note" placeholder="請輸入補簽時間或說明"></textarea>
   </label>
+  <button id="noteBtn">提交備註</button>
 
   <script src="main.js"></script>
 </body>
